--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name"
+    <application android:icon="@drawable/icon" android:label="Radio RaBe"
         android:hardwareAccelerated="true"
         android:debuggable="true">
         <activity android:name="RabeApp" android:label="@string/app_name"
